Fix gap in FF

--- a/main.css
+++ b/main.css
@@ -198,7 +198,6 @@ body {
     margin-bottom: 0.2rem;
     width: 100%;
     height: 12%;
-    gap: 2px;
 }
 .colors div {
     border: 2px solid black;
